# libgpiod

bindings/python/: MANIFEST.in  Makefile.am  setup.py
